# hodei-scan

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  EPIC-13-US-13.05-IMPLEMENTATION.md  Justfile  LICENSE  README.es.md  README.md  ROADMAP-v3.3-STATUS.md  TODO_TESTS_PENDIENTES.md  justfile  rustfmt.toml
crates/hodei-cli/: Cargo.toml  README.md
crates/hodei-cli/benches/: cache_manager_bench.rs  change_detection_bench.rs  incremental_analyzer_bench.rs
crates/hodei-cli/src/: lib.rs  main.rs
crates/hodei-cli/src/analysis/: cache_manager.rs  change_detector.rs  incremental.rs  mod.rs
crates/hodei-cli/tests/: test_incremental_analyzer_e2e.rs
crates/hodei-config/: Cargo.toml
crates/hodei-config/src/: lib.rs
crates/hodei-declarative-extractors/: Cargo.toml
crates/hodei-declarative-extractors/src/: errors.rs  lib.rs  matcher.rs  owasp_rules.rs  rule_tester.rs  rules.rs  semgrep_translator.rs  tree_sitter.rs
crates/hodei-declarative-extractors/src/lsp/: handlers.rs  mod.rs  server.rs  utils.rs
crates/hodei-deep-analysis-engine/: Cargo.toml  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION.md
crates/hodei-deep-analysis-engine/src/: analysis_cache.rs  lib.rs
crates/hodei-deep-analysis-engine/src/connascence/: algorithms.rs  analyzer.rs  findings.rs  mod.rs  types.rs
crates/hodei-deep-analysis-engine/src/policy/: mod.rs
crates/hodei-deep-analysis-engine/src/semantic_model/: builder.rs  cfg.rs  coupling_graph.rs  dfg.rs  fact_extractor.rs  mod.rs  scope_tree.rs
crates/hodei-deep-analysis-engine/src/taint_analysis/: datalog_rules.rs  mod.rs  propagator.rs
crates/hodei-deep-analysis-engine/tests/: connascence.rs  integration.rs  taint_analysis.rs
crates/hodei-dsl/: Cargo.toml  README.md
crates/hodei-dsl-lsp/: Cargo.toml
crates/hodei-dsl-lsp/src/: lib.rs
crates/hodei-dsl-lsp/src/application/: mod.rs  use_cases.rs
crates/hodei-dsl-lsp/src/domain/: mod.rs  models.rs  ports.rs  services.rs
crates/hodei-dsl-lsp/src/infrastructure/: mod.rs
crates/hodei-dsl-lsp/tests/fixtures/: mock_providers.rs  mod.rs  sample_documents.rs
crates/hodei-dsl-lsp/tests/integration/: complete_workflow.rs  lsp_server.rs
crates/hodei-dsl-lsp/tests/unit/: completion_provider.rs  document_repository.rs  hover_provider.rs  semantic_analyzer.rs  server.rs  services.rs  use_cases.rs
crates/hodei-dsl/benches/: dsl_parser_bench.rs  security_bench.rs
crates/hodei-dsl/grammar/: rules.pest
crates/hodei-dsl/src/: ast.rs  error.rs  lib.rs  parser.rs  tests.rs  type_checker.rs
crates/hodei-dsl/src/security/: mod.rs  sandbox.rs  security_tests.rs  validator.rs
crates/hodei-dsl/tests/: basic_test.rs
crates/hodei-engine/: Cargo.toml  README.md  build.rs
crates/hodei-engine/benches/: enum_map_bench.rs  indexed_store.rs  orchestrator_benchmark.rs  query_planner_bench.rs  rule_engine.rs
crates/hodei-engine/schemas/: extractor_protocol.capnp
crates/hodei-engine/src/: engine.rs  extractor_protocol_capnp.rs  lib.rs
crates/hodei-engine/src/engine/: evaluator.rs  finding.rs
crates/hodei-engine/src/extractor/: error.rs  mod.rs  orchestrator.rs  protocol.rs  ruff_adapter.rs  sarif_adapter.rs  sarif_extractor.rs  tests.rs
crates/hodei-engine/src/gates/: mod.rs
crates/hodei-engine/src/store/: flow_index.rs  mod.rs  planner.rs  spatial_index.rs  tests.rs  type_index.rs
crates/hodei-engine/tests/: test_query_planner.rs
crates/hodei-extractors/: Cargo.toml  README.md
crates/hodei-extractors/src/: core.rs  deduplication.rs  jacoco.rs  lib.rs  orchestrator.rs  sarif.rs
crates/hodei-extractors/src/tests/: sarif.rs
crates/hodei-extractors/tests/fixtures/: mock_extractor.sh
crates/hodei-ir/: CAPNP.md  Cargo.toml  README.md  build.rs
crates/hodei-ir/benches/: custom_fact_bench.rs  string_interner_bench.rs
crates/hodei-ir/schema/: facts.capnp  ir.capnp
crates/hodei-ir/src/: capnp_impl.rs  capnp_serialization.rs  custom_fact_tests.rs  fact_type_index.rs  lib.rs  migration.rs  plugin_schema_registry.rs  validator.rs  zero_copy.rs
crates/hodei-ir/src/interning/: mod.rs
crates/hodei-ir/src/types/: column_number.rs  common.rs  confidence.rs  coverage_percentage.rs  cve_id.rs  ecosystem.rs  extractor_id.rs  fact_id.rs  fact_value.rs  flow_id.rs  function_name.rs  line_number.rs  metadata.rs  mod.rs  project_path.rs  provenance.rs  severity.rs  source_location.rs  variable_name.rs
crates/hodei-ir/tests/: basic_functionality_test.rs  basic_test.rs  custom_facts_integration.rs
crates/hodei-java-extractor/: Cargo.toml  spoon-runner.java
crates/hodei-java-extractor/benches/: benchmarks.rs
crates/hodei-java-extractor/src/: lib.rs
crates/hodei-java-extractor/src/application/: dtos.rs  mod.rs  services.rs  use_cases.rs
crates/hodei-java-extractor/src/domain/: entities.rs  mod.rs  repositories.rs  services.rs
crates/hodei-java-extractor/src/infrastructure/: cli.rs  (+1 more)
crates/hodei-java-extractor/tests/: chaos_tests.rs  contract_tests.rs  e2e_github_tests.rs  fuzz_tests.rs  integration_tests.rs  jacoco_integration_test.rs  load_performance_tests.rs  mutation_tests.rs  property_tests.rs  snapshot_tests.rs  testcontainers_integration_tests.rs  visual_regression_tests.rs
crates/hodei-metrics/: Cargo.toml
crates/hodei-metrics/src/: lib.rs
crates/hodei-pattern-engine/: Cargo.toml
crates/hodei-pattern-engine/src/: batch_processor.rs  lib.rs  match_transform.rs  testing.rs  tree_sitter.rs  yaml_rule.rs
crates/hodei-pattern-engine/tests/: yaml_rule_tests.rs
crates/hodei-persistence/: Cargo.toml
crates/hodei-persistence/src/: lib.rs
crates/hodei-server/: Cargo.toml  README.md  build.rs
crates/hodei-server/docker/: Dockerfile  docker-compose.yml  init.sql
crates/hodei-server/proto/: hodei-server.proto
crates/hodei-server/src/: lib.rs  main.rs  modules.rs
crates/hodei-server/tests/: dashboard_api.rs  diff_api.rs  integration.rs  integration_tests.rs  storage_api.rs
crates/hodei-test/: Cargo.toml
crates/hodei-test/src/: lib.rs
crates/ir-dump/: Cargo.toml
crates/ir-dump/src/: cli.rs  interactive_explorer.rs  ir_formatter.rs  ir_reader.rs  lib.rs
(+243 files in other folders)
