[package]
name = "hodei-scan"
version = "0.1.0"
edition = "2024"
authors = ["hodei-scan Team"]
description = "Advanced Static Code Analysis with IR Architecture"
license = "MIT"
repository = "https://github.com/hodei-scan/hodei-scan"
keywords = ["static-analysis", "security", "sast", "ir"]
categories = ["development-tools::debugging"]

[workspace]
members = [
    "crates/hodei-ir",
    "crates/hodei-engine",
    "crates/hodei-dsl",
    "crates/hodei-extractors",
    "crates/hodei-cli",
]
resolver = "2"

[workspace.dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID and identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Hash maps and concurrent data structures
ahash = "0.8"
smallvec = { version = "1.0", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Parallelism
rayon = "1.0"

# Testing
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

# CLI
clap = { version = "4.0", features = ["derive", "cargo"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Parser
pest = "2.7"
pest_derive = "2.7"

# Zero-copy serialization
rkyv = "0.7"
rkyv_derive = "0.7"
bytecheck = "0.6"

# File system utilities
walkdir = "2.0"
tempfile = "3.0"

# Dev tools
cargo-husky = { version = "1.5", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
lto = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
