[package]
name = "hodei-scan"
version = "0.1.0"
edition = "2024"
authors = ["hodei-scan Team"]
description = "Advanced Static Code Analysis with IR Architecture"
license = "MIT"
repository = "https://github.com/hodei-scan/hodei-scan"
keywords = ["static-analysis", "security", "sast", "ir"]
categories = ["development-tools::debugging"]

[workspace]
members = [
    "crates/hodei-ir",
    "crates/hodei-engine",
    "crates/hodei-dsl",
    "crates/hodei-extractors",
    "crates/hodei-cli",
]
resolver = "2"

[workspace.dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID and identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Hash maps and concurrent data structures
ahash = "0.8"
smallvec = { version = "1.0", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Parallelism
rayon = "1.0"

# Testing
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

# CLI
clap = { version = "4.0", features = ["derive", "cargo"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Parser
pest = "2.7"
pest_derive = "2.7"
regex = "1.0"

# Concurrency and timeouts
crossbeam = "0.8"

# String interning and optimizations
string-interner = "0.3"
enum-map = "2.0"

# Zero-copy serialization
rkyv = "0.7"
rkyv_derive = "0.7"
bytecheck = "0.6"

# File system utilities
walkdir = "2.0"

# Spatial and graph indexes (EPIC-04)
rstar = "0.12"
petgraph = "0.6"

# Dev tools
cargo-husky = { version = "1.5", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }
tempfile = "3.0"

[dev-dependencies]
# Test dependencies
hodei-ir = { path = "crates/hodei-ir" }
hodei-extractors = { path = "crates/hodei-extractors" }
hodei-engine = { path = "crates/hodei-engine" }
hodei-dsl = { path = "crates/hodei-dsl" }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.48", features = ["full"] }
tempfile = "3.0"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[[test]]
name = "performance"
path = "tests/perf/mod.rs"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
lto = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
