[package]
name = "hodei-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for hodei-scan"
license = "MIT"

[dependencies]
hodei-ir = { path = "../hodei-ir" }
hodei-engine = { path = "../hodei-engine" }
hodei-extractors = { path = "../hodei-extractors" }
hodei-metrics = { path = "../hodei-metrics" }
hodei-persistence = { path = "../hodei-persistence" }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
