[package]
name = "hodei-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for hodei-scan"
license = "MIT"

[dependencies]
hodei-ir = { path = "../hodei-ir" }
hodei-engine = { path = "../hodei-engine" }
hodei-extractors = { path = "../hodei-extractors" }
hodei-metrics = { path = "../hodei-metrics" }
hodei-persistence = { path = "../hodei-persistence" }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
sha2 = "0.10"
git2 = "0.18"
rocksdb = "0.22"
bincode = "1.3"
tempfile = "3.0"
walkdir = "2.0"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "change_detection_bench"
harness = false

[[bench]]
name = "cache_manager_bench"
harness = false

[[bench]]
name = "incremental_analyzer_bench"
harness = false
