[package]
name = "hodei-declarative-extractors"
version = "0.1.0"
edition = "2024"

[dependencies]
# IR integration
hodei-ir = { path = "../hodei-ir" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# LSP
lsp-types = { version = "0.93", default-features = false }

# Async
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.10"
glob = "0.3"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.0"
