[package]
name = "hodei-dsl"
version = "0.1.0"
edition = "2024"
description = "DSL parser for hodei-scan rules"
license = "MIT"
repository = "https://github.com/hodei-scan/hodei-scan"

[dependencies]
hodei-ir = { path = "../hodei-ir" }
pest = { workspace = true }
pest_derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "security_bench"
harness = false

[[bench]]
name = "dsl_parser_bench"
harness = false
