[package]
name = "hodei-engine"
version = "0.1.0"
edition = "2024"
description = "Rule evaluation engine for hodei-scan"
license = "MIT"
repository = "https://github.com/hodei-scan/hodei-scan"

[dependencies]
hodei-ir = { path = "../hodei-ir" }
hodei-dsl = { path = "../hodei-dsl" }
ahash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
rstar = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
