[package]
name = "hodei-extractors"
version = "0.1.0"
edition = "2024"
description = "Extractors for various code analysis tools"
license = "MIT"
repository = "https://github.com/hodei-scan/hodei-scan"

[dependencies]
hodei-ir = { path = "../hodei-ir" }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
