[package]
name = "hodei-extractors"
version = "0.1.0"
edition = "2024"
description = "Source code analyzers for hodei-scan"
license = "MIT"
repository = "https://github.com/hodei-scan/hodei-scan"

[dependencies]
hodei-ir = { path = "../hodei-ir" }
ahash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util", "sync", "time", "macros"] }
walkdir = "2.5"
glob = "0.3"
blake3 = "1.5"
futures = "0.3"
tracing = "0.1"
async-trait = "0.1"
serde-sarif = "0.5"
quick-xml = { version = "0.36", features = ["serialize"] }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.23.0"
