[package]
name = "hodei-ir"
version = "0.1.0"
edition = "2024"
description = "Intermediate Representation (IR) core types for hodei-scan"
license = "MIT"
repository = "https://github.com/hodei-scan/hodei-scan"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
ahash = { workspace = true }
smallvec = { workspace = true }
rkyv = "0.7"
rkyv_derive = "0.7"
bytecheck = "0.6"
string-interner = "0.3"
enum-map = "2.7"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.0"
